--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 praw==7.1.0
 python-telegram-bot==13.1
 PyYAML==5.3.1
-boto3==1.16.49
 pytest==6.2.1
 pytest-cov==2.10.1
-pytype
+pytype==2021.1.8
+click==7.1.2
+pymongo
